--- a/Desafios/Site-Pet/stylesheet.css
+++ b/Desafios/Site-Pet/stylesheet.css
@@ -13,7 +13,7 @@ header{
     margin-top: -8px;
     margin-left: -8px;
     margin-right: -8px;
-    background-color: #fef7ed;
+    background-color: #fef7edab;
     position: fixed;
     display: flex;
     flex-direction: row;
@@ -44,7 +44,7 @@ header{
     color: rgb(0, 0, 0,0.5);
     text-shadow: 0 0 0.2em rgb(255, 243, 80), 0 0 0.2em rgb(255, 243, 80)
 }
-article{
+.article-type-1{
     height: max-content;
     width: 100%;
     height: 731px;
@@ -53,7 +53,7 @@ article{
     align-items: center;
     justify-content: space-around;
 }
-section{
+.section-type-1{
     height: max-content;
     width: 80%;
     height: 731px;
@@ -106,4 +106,50 @@ footer{
     height: 80%;
     width: 40%;
     border: solid black 1px;
+}
+#article2{
+
+    height: max-content;
+    width: 100%;
+    height: 731px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+#section2{
+    height: max-content;
+    width: 100%;
+    height: 731px;
+    display: flex;
+    flex-direction: column;
+    align-items: center ;
+    
+}
+#servicos{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 80%;
+    
+}
+.elementos-servicos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 25px;
+}
+.reserve-ja{
+    display: flex;
+    justify-content: center;
+    width: 204px;
+    height: 50px;
+    align-items: center;
+    font-size: 16px;
+    margin-top: 10px;
+    background-color: rgb(255, 238, 0);
+}
+.reserve-ja:hover{
+    -webkit-transition: 0.5s ease-out;
+    background-color: black;
+    color:#fef7ed
 }
