--- a/JS/tarefa02/index.css
+++ b/JS/tarefa02/index.css
@@ -1,9 +1,22 @@
-body{
+body {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    font-family: 'Kdam Thmor Pro', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bolder;
+    background-color: rgb(117, 117, 117);
 }
-#ex1{
+
+div {
     margin-bottom: 30px;
+    text-align: center;
+    padding: 20px 20px;
+    background-color: rgb(148, 148, 148);
+    box-shadow: 3px 3px 3px 3px;
+}
+input{
+    height: 20px;
+    text-decoration: none;
 }
