--- a/JS/tarefa06/ex1/index.css
+++ b/JS/tarefa06/ex1/index.css
@@ -8,21 +8,21 @@ body{
 }
 #bloco-principal{
     border: solid black 1px;
-    width: 700px;
+    width: 400px;
     height: 400px;
     display: flex;
     align-items: center;
-    padding-top: 10%;
+    padding: 5% 5%;
     flex-direction: column;
-    justify-content: baseline;
-    background-color: rgb(122, 196, 196);
+    justify-content: center;
+    background-color: rgb(255, 255, 255);   
+   
 }
-input{
-    height: 30px;
-    text-decoration: none;
-    border: double black 2px;
+img{
+    width: 200px;
+    height: 200px;
 }
 p{
-    font-size: 20px;
+    font-size: 30px;
     font-weight: bolder;
 }
