--- a/JS/tarefa06/ex3/index.css
+++ b/JS/tarefa06/ex3/index.css
@@ -5,6 +5,7 @@ body{
     font-family: 'Kdam Thmor Pro', sans-serif;
     font-family: 'Montserrat', sans-serif;
     background-color: rgb(185, 185, 185);
+    font-weight: bolder;
 }
 #bloco-principal{
     border: solid black 1px;
@@ -17,10 +18,24 @@ body{
     justify-content: baseline;
     background-color: rgb(122, 196, 196);
 }
+#bloco-secundario{
+    height: 20%;
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+select{
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    margin-left: 7px;
+    border: solid black 1px;
+}
 input{
     height: 30px;
     text-decoration: none;
-    border: double black 2px;
+    border: double black 1px;
+    background-color: rgb(0, 149, 168);
 }
 p{
     font-size: 20px;
