--- a/JS/tarefa07/ex3/index.css
+++ b/JS/tarefa07/ex3/index.css
@@ -18,9 +18,17 @@ body{
     background-color: rgb(122, 196, 196);
 }
 input{
-    height: 30px;
+    height: 40px;
     text-decoration: none;
     border: double black 2px;
+    margin-top: 30px;
+}
+#msg{
+    width: 400px;
+    height: 35px;
+}
+#enviar{
+    height: 40px;
 }
 p{
     font-size: 20px;
