--- a/JS/tarefa13/index.css
+++ b/JS/tarefa13/index.css
@@ -1,42 +1,52 @@
-body{
+body {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-color: rgb(211, 143, 112);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bolder;
 }
-#jogo{
+
+#jogo {
     display: flex;
     width: 400px;
     height: 400px;
-    border: solid black 1px;
     flex-direction: column;
     justify-content: space-between;
-    padding: 40px;
+    padding: 0px;
+    background-color: black;
 }
-.campo{
+
+.campo {
     border: solid black 1px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 50px;
-    height: 90px;
-    width: 90px;
+    height: 130px;
+    width: 130px;
+    background-color: rgb(223, 183, 157);
 }
-#linha1{
+
+#linha1 {
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
-#linha2{
+
+#linha2 {
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
-#linha3{
+
+#linha3 {
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
-#resultado{
+
+#resultado {
     font-size: 30px;
 }
